--- a/style.css
+++ b/style.css
@@ -1,2 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* google font */
+*{
+    margin: 0px;
+    padding:0px;
+    box-sizing: border-box;
+}
+body{
+    font-family: poppins;
+}
+.header-section{
+    margin: 70px;
+    display: flex;
+}
+.text-section{
+    margin-right: 50px; 
+    padding: 10px;
+}
+.header-section img{
+    width:500px;
+    height: auto;
+    border-radius: 20px;
+}
+.text-section button{
+    font-size: 20px;
+    padding: 15px;
+    font-weight: bold;
+    color: white;
+    background-color:rgba(5, 63, 5, 0.836);
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+}
+.text-section button:hover{
+    background-color: #39b012;
+}
+.header-section h1{
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+.text-section p{
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+.objective-section{
+    background-color:aliceblue;
+    display: flex;
+    margin-top:30px ;
+    border-radius: 10px;
+}
+.objective-section p{
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom:10px;
+}
+.objective-section div{
+    padding: 15px;
+}
+.main-section{
+    margin: 70px;
+}
+.objective-section i{
+    font-size:25px;
+    color:rgb(25, 170, 25);
+}
+.sub-section{
+    display: flex;
+    margin: 70px;
+    background-color: green;
+    border-radius: 15px;
+}
+.sub-section img{
+    width: 300x;
+    height: 300px;
+    margin: 20px;
+    border-radius: 15px;
+}
+.sub-section h1{
+    color: white;
+    margin: 30px;
+}
+.sub-section p{
+    color: white;
+    margin: 30px;
+}
+.sub-section h3{
+    color: white;
+    margin: 30px;
+    margin-top: 50px;
+}
